@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.80 2007-09-24 14:54:05 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.81 2007-09-24 15:09:40 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -819,7 +819,7 @@ current user (or root if started as root) is used.
 .Xc
 Compare the mail size with
 .Ar number .
-.It Xo Ic string Ar string Ic ~= Ar regexp
+.It Xo Ic string Ar string Ic =~ Ar regexp
 .Xc
 .It Xo Ic string Ar string Ic == Ar string
 .Xc
