@@ -1,4 +1,4 @@
-/* $Id: lex.c,v 1.22 2007-09-19 09:05:40 nicm Exp $ */
+/* $Id: lex.c,v 1.23 2007-09-24 15:09:40 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -258,6 +258,10 @@ restart:
 			yyerror("invalid macro name");
 		case '=':
 			ch = lex_getc();
+			if (ch == '~') {
+				value = TOKRE;
+				goto out;
+			}
 			if (ch == '=') {
 				value = TOKEQ;
 				goto out;
@@ -267,6 +271,10 @@ restart:
 			goto out;
 		case '!':
 			ch = lex_getc();
+			if (ch == '~') {
+				value = TOKNR;
+				goto out;
+			}
 			if (ch == '=') {
 				value = TOKNE;
 				goto out;
@@ -275,14 +283,6 @@ restart:
 			value = '!';
 			goto out;
 		case '~':
-			ch = lex_getc();
-			if (ch == '=') {
-				value = TOKRE;
-				goto out;
-			}
-			lex_ungetc(ch);
-			value = '~';
-			goto out;
 		case '+':
 		case '(':
 		case ')':
