@@ -1,4 +1,4 @@
-/* $Id: parse.y,v 1.249 2007-09-19 09:03:15 nicm Exp $ */
+/* $Id: parse.y,v 1.250 2007-09-24 15:09:41 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -147,7 +147,7 @@ yywarn(const char *fmt, ...)
 %token TOKEXEC TOKSTRING TOKKEEP TOKIMPLACT TOKHOURS TOKMINUTES TOKSECONDS
 %token TOKDAYS TOKWEEKS TOKMONTHS TOKYEARS TOKAGE TOKINVALID TOKKILOBYTES
 %token TOKMEGABYTES TOKGIGABYTES TOKBYTES TOKATTACHMENT TOKCOUNT TOKTOTALSIZE
-%token TOKANYTYPE TOKANYNAME TOKANYSIZE TOKEQ TOKNE TOKRE TOKNNTP TOKNNTPS
+%token TOKANYTYPE TOKANYNAME TOKANYSIZE TOKEQ TOKNE TOKRE TOKNR TOKNNTP TOKNNTPS
 %token TOKGROUP TOKGROUPS TOKPURGEAFTER TOKCOMPRESS TOKNORECEIVED TOKFILEUMASK
 %token TOKFILEGROUP TOKVALUE TOKTIMEOUT TOKREMOVEHEADER TOKREMOVEHEADERS
 %token TOKSTDOUT TOKNOVERIFY TOKADDHEADER TOKQUEUEHIGH TOKQUEUELOW TOKNOAPOP
@@ -1570,6 +1570,10 @@ strcmp: TOKTO
         {
 	       $$ = CMP_RE;
         }
+      | TOKNR
+        {
+	       $$ = CMP_NR;
+        }
       | eqne
 /**     [$1: eqne (enum cmp)] */
         {
@@ -1744,7 +1748,7 @@ expritem: not TOKALL
 		  data->str.str = $3;
 		  data->cmp = $4;
 
-		  if (data->cmp == CMP_RE) {
+		  if (data->cmp == CMP_RE || data->cmp == CMP_NR) {
 			  if (re_compile(
 			      &data->patt.re, $5, RE_NOSUBST, &cause) != 0)
 				  yyerror("%s", cause);
